.metadata/.plugins/org.eclipse.cdt.ui/Task1.build.log
17:00:45 **** Incremental Build of configuration Debug for project Task1 ****
Info: Internal Builder is used for build
g++ -std=c++1y -O0 -g3 -Wall -c -fmessage-length=0 -Wall -Werror=return-type -o "myCode\\ReversiBoard.o" "..\\myCode\\ReversiBoard.cpp" 
..\myCode\ReversiBoard.cpp: In constructor 'ReversiBoard::ReversiBoard()':
..\myCode\ReversiBoard.cpp:12:22: warning: left operand of comma operator has no effect [-Wunused-value]
   12 |         for(int i=0;i<8,i++){
      |                     ~^~
..\myCode\ReversiBoard.cpp:12:28: error: expected ';' before ')' token
   12 |         for(int i=0;i<8,i++){
      |                            ^
      |                            ;

17:00:45 Build Failed. 1 errors, 1 warnings. (took 120ms)

